--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ jacoco {
 dependencies {
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.10'
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
+    compile group: 'org.projectlombok', name: 'lombok', version: '1.18.16'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testImplementation 'org.mockito:mockito-core:2.23.4'
     testImplementation 'org.hamcrest:hamcrest-all:1.3'
